hphp/hack/test/typecheck/as_expression/dict2.php.exp
File "dict2.php", line 12, characters 31-34:
The type dict expects 2 type parameter(s) (Typing[4101])
File "dict2.php", line 13, characters 31-34:
The type dict expects 2 type parameter(s) (Typing[4101])
File "dict2.php", line 13, characters 16-34:
Invalid argument (Typing[4110])
  File "dict2.php", line 23, characters 28-30:
  This is an int
  File "dict2.php", line 13, characters 16-26:
  It is incompatible with a value of generic type Tk#2 from this "as" assertion
File "dict2.php", line 16, characters 16-40:
Invalid argument (Typing[4110])
  File "dict2.php", line 23, characters 28-30:
  This is an int
  File "dict2.php", line 16, characters 16-26:
  It is incompatible with a value of generic type Tk#4 from this "as" assertion
